# Client-work-1F

./: .gitignore  API_IMPROVEMENTS_SUMMARY.md  GROUP_NAME_MAPPING_FIX.md  INTEGRATION_README.md  PAYMENT_SERVICE_IMPROVEMENTS.md  README.md  UPDATED_IMPLEMENTATION_PLAN.md  index.html  package-lock.json  package.json  setup-integration.bat  student-form-improvements.ts
custom-search-mcp/: custom-search-mcp.js  package-lock.json  package.json
docs/: ACCESSIBILITY.md  ACCESSIBILITY_IMPLEMENTATION.md  ACCESSIBILITY_TEST_IMPROVEMENTS.md  API_DOCUMENTATION.md  INTEGRATION_README.md  KEYBOARD_NAVIGATION.md  MCP_SERPAPI_DOCUMENTATION.md  PROJECT_STRUCTURE.md  QR_CODE_IMPLEMENTATION.md  README.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_SUMMARY.md  qr-scanner-implementation.md  test-groups-api.md  test-groups-flow.md  test-groups-management.md
scripts/: README.md  setup-integration.bat  setup-integration.sh
src-tauri/: Cargo.toml  backup-2025-08-09.smsbackup  tauri.conf.json
src-tauri/docs/: MIGRATIONS.md  database_indexes.md
src-tauri/src/: attendance_service.rs  audit_service.rs  backup_service.rs  database.rs  database_integration_test.rs  export_service.rs  groups_service.rs  lib.rs  payment_service.rs  payment_service_test.rs  payment_settings_service.rs  qr_service.rs  scanner_lock.rs  settings_service.rs  student_service.rs
src-tauri/src/database/: migration.rs  mod.rs  performance.rs  schema.rs
src-tauri/src/ipc/: attendance_commands.rs  mod.rs  student_commands.rs
student-management-system-frontend/: ACCESSIBILITY_IMPLEMENTATION_SUMMARY.md  jest.setup.js  (+8 more)
(+85 files in other folders)
