[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = { version = "2", features = ["colored"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "backup"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
qrcode = "0.14"
image = "0.24"
printpdf = "0.6"
base64 = "0.21"
csv = "1.3"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
